# py2gsuite

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/: release-drafter.yml
.github/workflow/: release-drafter.yml
docs/: sheets.md  slides.md
example/: sheets.py  slides.py  slides_api_example.py
py2gsuite/: __init__.py
py2gsuite/api/: __init__.py  base.py  sheets.py  slides.py
py2gsuite/utils/: __init__.py  credential.py  format.py  logger.py  types.py
tests/: test_py2gsuite.py
tests/api/: test_sheets_api.py  test_slides_api.py
tests/utils/: test_format.py
